# hema

./: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: backend.md  frontend.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/app/: layout.tsx  theme.ts
frontend/lib/: auth.ts
frontend/src/: App.tsx  main.tsx  print.css  theme.ts
frontend/types/: calendar.ts  event.ts
migrations/: env.py
migrations/versions/: 2026_01_04_1320-aca6618f996c_.py  2026_01_04_1412-459a898082b5_add_color_to_events.py  2026_01_04_1611-cb0e6559d7e1_.py  2026_01_08_1810-daba54967a75_table_users_updated_phone_and_gender_.py  2026_01_10_2325-01d837c4987d_table_intentions_added.py  2026_01_13_1053-056a12d50cd9_.py  2026_01_13_1133-4d30ec38e41f_.py  2026_01_13_1148-acd7bcb22111_.py  2026_01_13_1237-55c80e1349a7_.py  2026_01_27_1136-ccba2a5e303d_.py  2026_02_18_0011-e10eaf296c79_.py  2026_02_18_0153-09208680f46a_.py  2026_04_19_2004-999afccfcd7b_split_event_datetime_into_date_time_.py  2026_04_19_2010-8a309355cec7_split_weekly_event_datetime_into_.py  2026_04_19_2018-e20434a4db5e_enforce_not_null_on_weekly_events_.py  2026_05_16_1225-8f6400caec9b_add_qr_attendance_system.py  2026_05_16_1729-1258a951f831_remove_uid_from_visits.py  2026_05_16_1747-bff235196a53_visits_pk_user_id_event_id.py  2026_05_16_1759-c446f2d57585_visits_timestamp_server_default.py  2026_05_16_2255-f00e7df9c0be_.py  2026_05_17_0040-8d4280d377e2_.py  (+3 more)
templates/: calendar.xhtml  user.xhtml
(+77 files in other folders)
