[project]
name = "hema"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.17.2",
    "alembic-autogen-check>=1.1.1",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hema"]

[tool.hatch.metadata]
allow-direct-references = true
